frontend/test/context/success/varuse-in-initializer.fc
void foo() {
    int a = 1;
    int b = a;
}
