frontend/test/context/error/redefined-vardef.fc
void foo() {
    int a = 1;
    bool a = true;
}
